# logiclab

./: pyproject.toml
agents/dev/: pyproject.toml
agents/librarian/: pyproject.toml
libs/core/: pyproject.toml
libs/core/src/logiclab_core/: http.py  logger.py
libs/kit/: pyproject.toml
libs/kit/src/logiclab_kit/responses_api/: streaming_response.py
libs/kit/src/logiclab_kit/responses_api/schema/: __init__.py  response_stream.py
libs/kit/src/logiclab_kit/schemas/responses_api/: __init__.py  create.py  response_builder.py  response_complete.py  response_stream.py
tools/book/: pyproject.toml
tools/weather/: pyproject.toml
